04 Typescript para Devs Nodejs/02 Como conf TypeScript Proj Nodejs/example/src/index.ts

(function main() {
    let myEmail = "felipao@dio.me";
    console.log(myEmail);    

    // myEmail = 1; // error
    myEmail = "felipao@dio.me";
    console.log(myEmail);

    myEmail = "felipao@dio.me";
    console.log(myEmail);    
})()


// function main() {
//     let myEmail = "felipao@dio.me";
//     // myEmail = 1; // error
//     console.log(myEmail);
// }

// main();